--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <h3 class="section-title" style="margin-top:0">Quick contact</h3>
           <p class="small">Send a short brief. I’ll reply by email to arrange a call.</p>
           <!-- Replace action with your Formspree endpoint or another form backend -->
-          <form action="https://formspree.io/f/your-id" method="POST">
+          <form action="https://formspree.io/f/mvgwgwjj" method="POST">
             <div class="row">
               <p><label for="name">Your name</label><br><input id="name" name="name" required autocomplete="name"></p>
               <p><label for="email">Email</label><br><input id="email" name="email" type="email" required autocomplete="email"></p>
