--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <h3 id="contacth" class="section-title">Contact</h3>
       <div class="split">
         <div class="card">
-          <p><strong>Email:</strong> <a href="mailto:hello@example.com">hello@example.com</a><br>
+          <p><strong>Email:</strong> <a href="mailto:hello@.com">Kataispellman@tuta.io</a><br>
              <strong>Phone:</strong> +1 647 560 1983<br>
              <strong>Office:</strong> Remote/By appointment</p>
           <p class="small">Please avoid sharing sensitive information until engagement is confirmed.</p>
