--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    :root { --bg:#0b1020; --ink:#e8eefc; --muted:#9fb2d6; --brand:#5aa3ff; --accent:#ffd166; --card:#121a36; }
+   :root { 
+  --bg:#1C3334;       /* dark teal background */
+  --ink:#DA7B93;      /* main text (soft pink) */
+  --muted:#2F4454;    /* muted text (blue-grey) */
+  --brand:#376E6F;    /* button & link (teal) */
+  --accent:#2E151B;   /* highlights / accents (deep maroon) */
+  --card:#2F4454;     /* card background */
+}
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
     a{color:var(--brand);text-decoration:none}
