--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <style>
    :root { 
   --bg:#1C3334;       /* dark teal background */
-  --ink:#DA7B93;      /* main text (soft pink) */
-  --muted:#2F4454;    /* muted text (blue-grey) */
+  --ink:##2F4454;      /* main text (soft pink) */
+  --muted:#DA7B93;    /* muted text (blue-grey) */
   --brand:#376E6F;    /* button & link (teal) */
   --accent:#2E151B;   /* highlights / accents (deep maroon) */
-  --card:#2F4454;     /* card background */
+  --card:##DA7B93;     /* card background */
 }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
