--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
-   :root { 
-  --bg:#1C3334;       /* dark teal background */
-  --ink:##2F4454;      /* main text (soft pink) */
-  --muted:#DA7B93;    /* muted text (blue-grey) */
-  --brand:#376E6F;    /* button & link (teal) */
-  --accent:#2E151B;   /* highlights / accents (deep maroon) */
-  --card:##DA7B93;     /* card background */
+  :root{
+  --bg:#18111A;        /* deep plum-charcoal */
+  --ink:#F9EEF2;       /* soft ivory text */
+  --muted:#BFA9B7;     /* dusty mauve for secondary */
+  --brand:#D44B84;     /* refined rose for buttons/links */
+  --accent:#E4C3A4;    /* warm pearl-gold accents */
+  --card:#241724;      /* slightly lighter plum cards */
 }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
