--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   --card:#241724;      /* slightly lighter plum cards */
 }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
+    html,body{
+  margin:0;
+  padding:0;
+  background:linear-gradient(135deg, #18111A 0%, #2A1B2D 40%, #D44B84 100%);
+  color:var(--ink);
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+}
     a{color:var(--brand);text-decoration:none}
     a:hover{text-decoration:underline}
     .wrap{max-width:1100px;margin:0 auto;padding:24px}
