--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="split">
         <div>
           <h3 id="abt" class="section-title">About Katai</h3>
-          <p>I’m a financial lawyer focused on practical, risk‑aware solutions. I work with individuals and SMEs navigating exchanges, banks, and regulators. I aim for clear timelines, documented steps, and de‑escalation first.</p>
+<p>I help individuals and SMEs navigate banks, exchanges, payment providers, and regulators. My approach is evidence-first, low-drama, and timeline-driven: clarify scope, collect documents, escalate precisely, and resolve disputes pragmatically. Typical matters include bank/exchange freezes, transaction audits (AML/KYC/SOF), pre-action correspondence, and settlement negotiations.</p>
           <p class="small">This is a sample bio—replace with your own background, education, and jurisdictions where you’re authorised to practise.</p>
         </div>
         <div class="card">
@@ -189,16 +189,33 @@
       </div>
     </section>
 
-    <section id="credentials" class="wrap section" aria-labelledby="cred">
-      <h3 id="cred" class="section-title">Credentials & Ethos</h3>
+<section id="terms" class="wrap section" aria-labelledby="terms-h">
+  <h3 id="terms-h" class="section-title">Terms of Engagement (Summary)</h3>
+  <div class="card">
+    <ul class="clean">
+      <li><strong>Scope & letter:</strong> Work starts only after a written engagement letter confirming scope, timelines, and fees.</li>
+      <li><strong>Fees:</strong> Fixed-fee options for standard work; otherwise time-based with caps agreed in writing.</li>
+      <li><strong>Documents:</strong> Client provides accurate records (IDs, statements, correspondence, logs). Misstatements void the engagement.</li>
+      <li><strong>No guarantees:</strong> Outcomes depend on counterparties and facts. Prior results don’t guarantee future results.</li>
+      <li><strong>Confidentiality & data:</strong> Data minimisation, secure storage, and limited retention (see Privacy Notice).</li>
+      <li><strong>Termination:</strong> Either party may terminate on notice; fees due for work performed to date.</li>
+      <li><strong>Governing law:</strong> England & Wales, unless agreed otherwise in writing.</li>
+    </ul>
+  </div>
+</section>
+    <h3 id="cred" class="section-title">Credentials & Ethos</h3>
       <div class="grid two">
         <div class="card">
           <h4>Professional details</h4>
-          <ul class="clean">
-            <li><strong>Regulatory status:</strong> <em>state clearly if you are a solicitor/barrister, or if unregulated—be transparent.</em></li>
-            <li><strong>Insured:</strong> <em>add PII details if applicable</em></li>
-            <li><strong>Complaints:</strong> <em>link to your policy and ombudsman route</em></li>
-          </ul>
+        <ul class="clean">
+  <li><strong>Regulatory status:</strong> Independent financial law consultant. Not a practising solicitor/barrister. Services are limited to legal information, document drafting support, and compliance guidance. Legal advice is provided only after a written engagement agreement.</li>
+  <li><strong>Professional Indemnity Insurance:</strong> In place for consultancy services (policy ref: EXAMPLE-PII-001). Evidence available on request.</li>
+  <li><strong>Conflicts & confidentiality:</strong> Conflicts are checked on intake. Client information is handled under strict confidentiality and data-minimisation principles.</li>
+  <li><strong>Complaints:</strong> See the <a href="#complaints-policy">Complaints Policy</a> for process and escalation routes.</li>
+  <li><strong>Jurisdictions served:</strong> G7 (Canada, France, Germany, Italy, Japan, United Kingdom, United States). Remote first; in-person by appointment.</li>
+  <li><strong>Languages:</strong> English (primary). Additional languages available via certified interpreters on request.</li>
+  <li><strong>Response times:</strong> New enquiries acknowledged within 1 business day; initial assessment within 72 hours.</li>
+</ul>
         </div>
         <div class="card">
           <h4>How I work</h4>
