--- a/index.html
+++ b/index.html
@@ -180,11 +180,12 @@
         <div class="card">
           <h4 style="margin-top:0">At a glance</h4>
           <ul class="clean">
-            <li>LLB / LLM — <em>add your schools</em></li>
-            <li>Practice areas: financial disputes, compliance, contracts</li>
-            <li>Jurisdictions: <em>add your bar/roll/SRA status</em></li>
-            <li>Languages: English, <em>add others</em></li>
-          </ul>
+  <li><strong>Services:</strong> Compliance · Disputes · Transactions</li>
+  <li><strong>Clients:</strong> Individuals & SMEs</li>
+  <li><strong>Jurisdictions:</strong> G7 countries (remote-first; in-person by appointment)</li>
+  <li><strong>Response times:</strong> Enquiries answered within 1 business day; initial intake within 72 hours</li>
+  <li><strong>Contact:</strong> <a href="mailto:Kataispellman@tuta.io">Kataispellman@tuta.io</a> · +1 647 560 1983</li>
+</ul>
         </div>
       </div>
     </section>
